--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "eu-test-data-generator"
-version = "0.3.0"
+name = "idsmith"
+version = "0.4.0"
 edition = "2021"
 authors = ["Tony Benoy <me@tonybenoy.com>"]
-description = "Generate valid test IBANs and personal ID codes for 96 countries. Supports PESEL, personnummer, codice fiscale, JMBG, and 27 more formats."
+description = "Generate valid, checksum-correct IBANs, personal IDs, and bank accounts for 252 countries. Supports CPF, Aadhaar, CURP, SSN, PESEL, and 50+ more formats."
 license = "MIT"
-keywords = ["iban", "test-data", "generator", "personal-id", "european"]
+keywords = ["iban", "test-data", "generator", "personal-id", "faker"]
 categories = ["command-line-utilities", "development-tools::testing"]
-repository = "https://github.com/Sunyata-OU/EU-Test-Data-Generator"
+repository = "https://github.com/Sunyata-OU/idsmith"
 
 [lib]
-name = "eu_test_data_generator"
+name = "idsmith"
 path = "src/lib.rs"
 
 [[bin]]
-name = "eu-test-data-generator"
+name = "idsmith"
 path = "src/main.rs"
 required-features = ["cli"]
 
