--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,24 +9,8 @@ permissions:
   id-token: write
 
 jobs:
-  check-tag:
-    name: Check if Python release
-    runs-on: ubuntu-latest
-    outputs:
-      is_python: ${{ steps.check.outputs.is_python }}
-    steps:
-      - id: check
-        run: |
-          if [[ "${{ github.event.release.tag_name }}" == python-v* ]]; then
-            echo "is_python=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "is_python=false" >> "$GITHUB_OUTPUT"
-          fi
-
   build-wheels:
     name: Build wheels on ${{ matrix.os }}
-    needs: check-tag
-    if: needs.check-tag.outputs.is_python == 'true'
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -54,8 +38,7 @@ jobs:
 
   publish:
     name: Publish to PyPI
-    needs: [check-tag, build-wheels]
-    if: needs.check-tag.outputs.is_python == 'true'
+    needs: build-wheels
     runs-on: ubuntu-latest
     environment:
       name: pypi
