fix npm pipeline

--- a/.github/workflows/node-publish.yml
+++ b/.github/workflows/node-publish.yml
@@ -71,7 +71,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
-          registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/download-artifact@v4
         with:
@@ -85,4 +84,4 @@ jobs:
 
       - name: Publish
         working-directory: bindings/node
-        run: npm publish --access public
+        run: npm publish --provenance --access public
